// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Menu
    allowedGPS={true}
    favoriteOrder="nothing"
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    timeFormat="minutes"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Feedback
          close={[Function]}
          visible={false}
        />,
        <ScrollView>
          <ImageBackground
            source={
              Object {
                "uri": "https://www.w3schools.com/css/img_fjords.jpg",
              }
            }
            style={
              Object {
                "height": 120,
                "width": 225,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgba(255,255,255,0.7)",
                  "flex": 1,
                }
              }
            />
          </ImageBackground>
          <ListHeading
            text="Konto"
          />
          <DefaultFont
            style={
              Object {
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 0,
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 10,
              }
            }
          >
            E-MAIL
          </DefaultFont>
          <DefaultFont
            style={
              Object {
                "marginBottom": 10,
                "paddingLeft": 10,
              }
            }
          />
          <ListHeading
            text="Inställningar"
          />
          <DefaultFont
            style={
              Object {
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 0,
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 10,
              }
            }
          >
            TIDSFORMAT
          </DefaultFont>
          <Picker
            itemStyle={
              Object {
                "fontSize": 16,
                "height": 90,
                "marginTop": -10,
              }
            }
            onValueChange={[Function]}
            selectedValue="minutes"
            style={
              Array [
                Object {},
              ]
            }
          >
            <UNDEFINED
              label="Minuter"
              value="minutes"
            />
            <UNDEFINED
              label="Klockslag"
              value="clock"
            />
          </Picker>
          <View>
            <DefaultFont
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                }
              }
            >
              SORTERA FAVORITER
            </DefaultFont>
            <Picker
              itemStyle={
                Object {
                  "fontSize": 16,
                  "height": 90,
                  "marginTop": -10,
                }
              }
              onValueChange={[Function]}
              selectedValue="nothing"
              style={
                Array [
                  Object {},
                ]
              }
            >
              <UNDEFINED
                label="Ingen sortering"
                value="nothing"
              />
              <UNDEFINED
                label="Mina mest använda"
                value="opened"
              />
              <UNDEFINED
                label="Efter bokstav"
                value="busStop"
              />
            </Picker>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <DefaultFont
              style={
                Array [
                  Object {
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  },
                  Object {
                    "paddingTop": 0,
                  },
                ]
              }
            >
              HÅLLPLATSER NÄRA DIG
            </DefaultFont>
            <Switch
              onTintColor="rgba(119, 158, 203, 0.4)"
              onValueChange={[Function]}
              style={
                Object {
                  "marginRight": 10,
                }
              }
              thumbTintColor="#779ECB"
              tintColor="#cecece"
              value={true}
            />
          </View>
          <View
            style={
              Object {
                "marginBottom": 10,
              }
            }
          />
          <ListHeading
            text="Åtgärder"
          />
          <ListItem
            icon="ios-mail-outline"
            iconVisible={true}
            pressItem={[Function]}
            style={
              Object {
                "marginTop": 10,
              }
            }
            text="Lämna feedback"
          />
          <ListItem
            icon="ios-exit-outline"
            iconVisible={true}
            pressItem={[Function]}
            text="Logga ut"
          />
        </ScrollView>,
      ],
      "style": Object {
        "backgroundColor": "#EAE9EF",
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "close": [Function],
          "visible": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <ImageBackground
              source={
                Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                }
              }
              style={
                Object {
                  "height": 120,
                  "width": 225,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />
            </ImageBackground>,
            <ListHeading
              text="Konto"
            />,
            <DefaultFont
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                }
              }
            >
              E-MAIL
            </DefaultFont>,
            <DefaultFont
              style={
                Object {
                  "marginBottom": 10,
                  "paddingLeft": 10,
                }
              }
            />,
            <ListHeading
              text="Inställningar"
            />,
            <DefaultFont
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                }
              }
            >
              TIDSFORMAT
            </DefaultFont>,
            <Picker
              itemStyle={
                Object {
                  "fontSize": 16,
                  "height": 90,
                  "marginTop": -10,
                }
              }
              onValueChange={[Function]}
              selectedValue="minutes"
              style={
                Array [
                  Object {},
                ]
              }
            >
              <UNDEFINED
                label="Minuter"
                value="minutes"
              />
              <UNDEFINED
                label="Klockslag"
                value="clock"
              />
            </Picker>,
            <View>
              <DefaultFont
                style={
                  Object {
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  }
                }
              >
                SORTERA FAVORITER
              </DefaultFont>
              <Picker
                itemStyle={
                  Object {
                    "fontSize": 16,
                    "height": 90,
                    "marginTop": -10,
                  }
                }
                onValueChange={[Function]}
                selectedValue="nothing"
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <UNDEFINED
                  label="Ingen sortering"
                  value="nothing"
                />
                <UNDEFINED
                  label="Mina mest använda"
                  value="opened"
                />
                <UNDEFINED
                  label="Efter bokstav"
                  value="busStop"
                />
              </Picker>
            </View>,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <DefaultFont
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginBottom": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 10,
                      "paddingTop": 10,
                    },
                    Object {
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                HÅLLPLATSER NÄRA DIG
              </DefaultFont>
              <Switch
                onTintColor="rgba(119, 158, 203, 0.4)"
                onValueChange={[Function]}
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
                thumbTintColor="#779ECB"
                tintColor="#cecece"
                value={true}
              />
            </View>,
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            />,
            <ListHeading
              text="Åtgärder"
            />,
            <ListItem
              icon="ios-mail-outline"
              iconVisible={true}
              pressItem={[Function]}
              style={
                Object {
                  "marginTop": 10,
                }
              }
              text="Lämna feedback"
            />,
            <ListItem
              icon="ios-exit-outline"
              iconVisible={true}
              pressItem={[Function]}
              text="Logga ut"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />,
              "source": Object {
                "uri": "https://www.w3schools.com/css/img_fjords.jpg",
              },
              "style": Object {
                "height": 120,
                "width": 225,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "style": Object {
                  "backgroundColor": "rgba(255,255,255,0.7)",
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Konto",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "E-MAIL",
              "style": Object {
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 0,
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 10,
              },
            },
            "ref": null,
            "rendered": "E-MAIL",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": undefined,
              "style": Object {
                "marginBottom": 10,
                "paddingLeft": 10,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Inställningar",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "TIDSFORMAT",
              "style": Object {
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 0,
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 10,
              },
            },
            "ref": null,
            "rendered": "TIDSFORMAT",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <UNDEFINED
                  label="Minuter"
                  value="minutes"
                />,
                <UNDEFINED
                  label="Klockslag"
                  value="clock"
                />,
              ],
              "itemStyle": Object {
                "fontSize": 16,
                "height": 90,
                "marginTop": -10,
              },
              "onValueChange": [Function],
              "selectedValue": "minutes",
              "style": Array [
                Object {},
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Minuter",
                  "value": "minutes",
                },
                "ref": null,
                "rendered": null,
                "type": undefined,
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Klockslag",
                  "value": "clock",
                },
                "ref": null,
                "rendered": null,
                "type": undefined,
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <DefaultFont
                  style={
                    Object {
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginBottom": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 10,
                      "paddingTop": 10,
                    }
                  }
                >
                  SORTERA FAVORITER
                </DefaultFont>,
                <Picker
                  itemStyle={
                    Object {
                      "fontSize": 16,
                      "height": 90,
                      "marginTop": -10,
                    }
                  }
                  onValueChange={[Function]}
                  selectedValue="nothing"
                  style={
                    Array [
                      Object {},
                    ]
                  }
                >
                  <UNDEFINED
                    label="Ingen sortering"
                    value="nothing"
                  />
                  <UNDEFINED
                    label="Mina mest använda"
                    value="opened"
                  />
                  <UNDEFINED
                    label="Efter bokstav"
                    value="busStop"
                  />
                </Picker>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "SORTERA FAVORITER",
                  "style": Object {
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  },
                },
                "ref": null,
                "rendered": "SORTERA FAVORITER",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <UNDEFINED
                      label="Ingen sortering"
                      value="nothing"
                    />,
                    <UNDEFINED
                      label="Mina mest använda"
                      value="opened"
                    />,
                    <UNDEFINED
                      label="Efter bokstav"
                      value="busStop"
                    />,
                  ],
                  "itemStyle": Object {
                    "fontSize": 16,
                    "height": 90,
                    "marginTop": -10,
                  },
                  "onValueChange": [Function],
                  "selectedValue": "nothing",
                  "style": Array [
                    Object {},
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "label": "Ingen sortering",
                      "value": "nothing",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": undefined,
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "label": "Mina mest använda",
                      "value": "opened",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": undefined,
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "label": "Efter bokstav",
                      "value": "busStop",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": undefined,
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <DefaultFont
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "marginBottom": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 10,
                        "paddingTop": 10,
                      },
                      Object {
                        "paddingTop": 0,
                      },
                    ]
                  }
                >
                  HÅLLPLATSER NÄRA DIG
                </DefaultFont>,
                <Switch
                  onTintColor="rgba(119, 158, 203, 0.4)"
                  onValueChange={[Function]}
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                  thumbTintColor="#779ECB"
                  tintColor="#cecece"
                  value={true}
                />,
              ],
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "HÅLLPLATSER NÄRA DIG",
                  "style": Array [
                    Object {
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginBottom": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 10,
                      "paddingTop": 10,
                    },
                    Object {
                      "paddingTop": 0,
                    },
                  ],
                },
                "ref": null,
                "rendered": "HÅLLPLATSER NÄRA DIG",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "onTintColor": "rgba(119, 158, 203, 0.4)",
                  "onValueChange": [Function],
                  "style": Object {
                    "marginRight": 10,
                  },
                  "thumbTintColor": "#779ECB",
                  "tintColor": "#cecece",
                  "value": true,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "style": Object {
                "marginBottom": 10,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Åtgärder",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-mail-outline",
              "iconVisible": true,
              "pressItem": [Function],
              "style": Object {
                "marginTop": 10,
              },
              "text": "Lämna feedback",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-exit-outline",
              "iconVisible": true,
              "pressItem": [Function],
              "text": "Logga ut",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Feedback
            close={[Function]}
            visible={false}
          />,
          <ScrollView>
            <ImageBackground
              source={
                Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                }
              }
              style={
                Object {
                  "height": 120,
                  "width": 225,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />
            </ImageBackground>
            <ListHeading
              text="Konto"
            />
            <DefaultFont
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                }
              }
            >
              E-MAIL
            </DefaultFont>
            <DefaultFont
              style={
                Object {
                  "marginBottom": 10,
                  "paddingLeft": 10,
                }
              }
            />
            <ListHeading
              text="Inställningar"
            />
            <DefaultFont
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                }
              }
            >
              TIDSFORMAT
            </DefaultFont>
            <Picker
              itemStyle={
                Object {
                  "fontSize": 16,
                  "height": 90,
                  "marginTop": -10,
                }
              }
              onValueChange={[Function]}
              selectedValue="minutes"
              style={
                Array [
                  Object {},
                ]
              }
            >
              <UNDEFINED
                label="Minuter"
                value="minutes"
              />
              <UNDEFINED
                label="Klockslag"
                value="clock"
              />
            </Picker>
            <View>
              <DefaultFont
                style={
                  Object {
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  }
                }
              >
                SORTERA FAVORITER
              </DefaultFont>
              <Picker
                itemStyle={
                  Object {
                    "fontSize": 16,
                    "height": 90,
                    "marginTop": -10,
                  }
                }
                onValueChange={[Function]}
                selectedValue="nothing"
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <UNDEFINED
                  label="Ingen sortering"
                  value="nothing"
                />
                <UNDEFINED
                  label="Mina mest använda"
                  value="opened"
                />
                <UNDEFINED
                  label="Efter bokstav"
                  value="busStop"
                />
              </Picker>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <DefaultFont
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginBottom": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 10,
                      "paddingTop": 10,
                    },
                    Object {
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                HÅLLPLATSER NÄRA DIG
              </DefaultFont>
              <Switch
                onTintColor="rgba(119, 158, 203, 0.4)"
                onValueChange={[Function]}
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
                thumbTintColor="#779ECB"
                tintColor="#cecece"
                value={true}
              />
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            />
            <ListHeading
              text="Åtgärder"
            />
            <ListItem
              icon="ios-mail-outline"
              iconVisible={true}
              pressItem={[Function]}
              style={
                Object {
                  "marginTop": 10,
                }
              }
              text="Lämna feedback"
            />
            <ListItem
              icon="ios-exit-outline"
              iconVisible={true}
              pressItem={[Function]}
              text="Logga ut"
            />
          </ScrollView>,
        ],
        "style": Object {
          "backgroundColor": "#EAE9EF",
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "close": [Function],
            "visible": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <ImageBackground
                source={
                  Object {
                    "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                  }
                }
                style={
                  Object {
                    "height": 120,
                    "width": 225,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "rgba(255,255,255,0.7)",
                      "flex": 1,
                    }
                  }
                />
              </ImageBackground>,
              <ListHeading
                text="Konto"
              />,
              <DefaultFont
                style={
                  Object {
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  }
                }
              >
                E-MAIL
              </DefaultFont>,
              <DefaultFont
                style={
                  Object {
                    "marginBottom": 10,
                    "paddingLeft": 10,
                  }
                }
              />,
              <ListHeading
                text="Inställningar"
              />,
              <DefaultFont
                style={
                  Object {
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  }
                }
              >
                TIDSFORMAT
              </DefaultFont>,
              <Picker
                itemStyle={
                  Object {
                    "fontSize": 16,
                    "height": 90,
                    "marginTop": -10,
                  }
                }
                onValueChange={[Function]}
                selectedValue="minutes"
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <UNDEFINED
                  label="Minuter"
                  value="minutes"
                />
                <UNDEFINED
                  label="Klockslag"
                  value="clock"
                />
              </Picker>,
              <View>
                <DefaultFont
                  style={
                    Object {
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginBottom": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 10,
                      "paddingTop": 10,
                    }
                  }
                >
                  SORTERA FAVORITER
                </DefaultFont>
                <Picker
                  itemStyle={
                    Object {
                      "fontSize": 16,
                      "height": 90,
                      "marginTop": -10,
                    }
                  }
                  onValueChange={[Function]}
                  selectedValue="nothing"
                  style={
                    Array [
                      Object {},
                    ]
                  }
                >
                  <UNDEFINED
                    label="Ingen sortering"
                    value="nothing"
                  />
                  <UNDEFINED
                    label="Mina mest använda"
                    value="opened"
                  />
                  <UNDEFINED
                    label="Efter bokstav"
                    value="busStop"
                  />
                </Picker>
              </View>,
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <DefaultFont
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "marginBottom": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 10,
                        "paddingTop": 10,
                      },
                      Object {
                        "paddingTop": 0,
                      },
                    ]
                  }
                >
                  HÅLLPLATSER NÄRA DIG
                </DefaultFont>
                <Switch
                  onTintColor="rgba(119, 158, 203, 0.4)"
                  onValueChange={[Function]}
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                  thumbTintColor="#779ECB"
                  tintColor="#cecece"
                  value={true}
                />
              </View>,
              <View
                style={
                  Object {
                    "marginBottom": 10,
                  }
                }
              />,
              <ListHeading
                text="Åtgärder"
              />,
              <ListItem
                icon="ios-mail-outline"
                iconVisible={true}
                pressItem={[Function]}
                style={
                  Object {
                    "marginTop": 10,
                  }
                }
                text="Lämna feedback"
              />,
              <ListItem
                icon="ios-exit-outline"
                iconVisible={true}
                pressItem={[Function]}
                text="Logga ut"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <View
                  style={
                    Object {
                      "backgroundColor": "rgba(255,255,255,0.7)",
                      "flex": 1,
                    }
                  }
                />,
                "source": Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                },
                "style": Object {
                  "height": 120,
                  "width": 225,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "style": Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Konto",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "E-MAIL",
                "style": Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                },
              },
              "ref": null,
              "rendered": "E-MAIL",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": undefined,
                "style": Object {
                  "marginBottom": 10,
                  "paddingLeft": 10,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Inställningar",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "TIDSFORMAT",
                "style": Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                },
              },
              "ref": null,
              "rendered": "TIDSFORMAT",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <UNDEFINED
                    label="Minuter"
                    value="minutes"
                  />,
                  <UNDEFINED
                    label="Klockslag"
                    value="clock"
                  />,
                ],
                "itemStyle": Object {
                  "fontSize": 16,
                  "height": 90,
                  "marginTop": -10,
                },
                "onValueChange": [Function],
                "selectedValue": "minutes",
                "style": Array [
                  Object {},
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "label": "Minuter",
                    "value": "minutes",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": undefined,
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "label": "Klockslag",
                    "value": "clock",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": undefined,
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <DefaultFont
                    style={
                      Object {
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "marginBottom": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 10,
                        "paddingTop": 10,
                      }
                    }
                  >
                    SORTERA FAVORITER
                  </DefaultFont>,
                  <Picker
                    itemStyle={
                      Object {
                        "fontSize": 16,
                        "height": 90,
                        "marginTop": -10,
                      }
                    }
                    onValueChange={[Function]}
                    selectedValue="nothing"
                    style={
                      Array [
                        Object {},
                      ]
                    }
                  >
                    <UNDEFINED
                      label="Ingen sortering"
                      value="nothing"
                    />
                    <UNDEFINED
                      label="Mina mest använda"
                      value="opened"
                    />
                    <UNDEFINED
                      label="Efter bokstav"
                      value="busStop"
                    />
                  </Picker>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "SORTERA FAVORITER",
                    "style": Object {
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginBottom": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 10,
                      "paddingTop": 10,
                    },
                  },
                  "ref": null,
                  "rendered": "SORTERA FAVORITER",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <UNDEFINED
                        label="Ingen sortering"
                        value="nothing"
                      />,
                      <UNDEFINED
                        label="Mina mest använda"
                        value="opened"
                      />,
                      <UNDEFINED
                        label="Efter bokstav"
                        value="busStop"
                      />,
                    ],
                    "itemStyle": Object {
                      "fontSize": 16,
                      "height": 90,
                      "marginTop": -10,
                    },
                    "onValueChange": [Function],
                    "selectedValue": "nothing",
                    "style": Array [
                      Object {},
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "label": "Ingen sortering",
                        "value": "nothing",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": undefined,
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "label": "Mina mest använda",
                        "value": "opened",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": undefined,
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "label": "Efter bokstav",
                        "value": "busStop",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": undefined,
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <DefaultFont
                    style={
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "bold",
                          "marginBottom": 0,
                          "paddingBottom": 0,
                          "paddingLeft": 10,
                          "paddingTop": 10,
                        },
                        Object {
                          "paddingTop": 0,
                        },
                      ]
                    }
                  >
                    HÅLLPLATSER NÄRA DIG
                  </DefaultFont>,
                  <Switch
                    onTintColor="rgba(119, 158, 203, 0.4)"
                    onValueChange={[Function]}
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                    thumbTintColor="#779ECB"
                    tintColor="#cecece"
                    value={true}
                  />,
                ],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "HÅLLPLATSER NÄRA DIG",
                    "style": Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "marginBottom": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 10,
                        "paddingTop": 10,
                      },
                      Object {
                        "paddingTop": 0,
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": "HÅLLPLATSER NÄRA DIG",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "onTintColor": "rgba(119, 158, 203, 0.4)",
                    "onValueChange": [Function],
                    "style": Object {
                      "marginRight": 10,
                    },
                    "thumbTintColor": "#779ECB",
                    "tintColor": "#cecece",
                    "value": true,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "style": Object {
                  "marginBottom": 10,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Åtgärder",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "ios-mail-outline",
                "iconVisible": true,
                "pressItem": [Function],
                "style": Object {
                  "marginTop": 10,
                },
                "text": "Lämna feedback",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "ios-exit-outline",
                "iconVisible": true,
                "pressItem": [Function],
                "text": "Logga ut",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should match snapshot if anonymous 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Menu
    allowedGPS={true}
    favoriteOrder="nothing"
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    timeFormat="minutes"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Feedback
          close={[Function]}
          visible={false}
        />,
        <ScrollView>
          <ImageBackground
            source={
              Object {
                "uri": "https://www.w3schools.com/css/img_fjords.jpg",
              }
            }
            style={
              Object {
                "height": 120,
                "width": 225,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgba(255,255,255,0.7)",
                  "flex": 1,
                }
              }
            />
          </ImageBackground>
          <ListHeading
            text="Konto"
          />
          <DefaultFont
            style={
              Object {
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 0,
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 10,
              }
            }
          >
            E-MAIL
          </DefaultFont>
          <DefaultFont
            style={
              Object {
                "marginBottom": 10,
                "paddingLeft": 10,
              }
            }
          >
            Anonym
          </DefaultFont>
          <ListHeading
            text="Inställningar"
          />
          <DefaultFont
            style={
              Object {
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 0,
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 10,
              }
            }
          >
            TIDSFORMAT
          </DefaultFont>
          <Picker
            itemStyle={
              Object {
                "fontSize": 16,
                "height": 90,
                "marginTop": -10,
              }
            }
            onValueChange={[Function]}
            selectedValue="minutes"
            style={
              Array [
                Object {},
              ]
            }
          >
            <UNDEFINED
              label="Minuter"
              value="minutes"
            />
            <UNDEFINED
              label="Klockslag"
              value="clock"
            />
          </Picker>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <DefaultFont
              style={
                Array [
                  Object {
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  },
                  Object {
                    "paddingTop": 0,
                  },
                ]
              }
            >
              HÅLLPLATSER NÄRA DIG
            </DefaultFont>
            <Switch
              onTintColor="rgba(119, 158, 203, 0.4)"
              onValueChange={[Function]}
              style={
                Object {
                  "marginRight": 10,
                }
              }
              thumbTintColor="#779ECB"
              tintColor="#cecece"
              value={true}
            />
          </View>
          <View
            style={
              Object {
                "marginBottom": 10,
              }
            }
          />
          <ListHeading
            text="Åtgärder"
          />
          <ListItem
            icon="ios-mail-outline"
            iconVisible={true}
            pressItem={[Function]}
            style={
              Object {
                "marginTop": 10,
              }
            }
            text="Lämna feedback"
          />
          <View>
            <ListItem
              icon="ios-log-in-outline"
              iconVisible={true}
              pressItem={[Function]}
              text="Logga in"
            />
            <ListItem
              icon="ios-log-in-outline"
              iconVisible={true}
              pressItem={[Function]}
              text="Registrera"
            />
          </View>
        </ScrollView>,
      ],
      "style": Object {
        "backgroundColor": "#EAE9EF",
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "close": [Function],
          "visible": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <ImageBackground
              source={
                Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                }
              }
              style={
                Object {
                  "height": 120,
                  "width": 225,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />
            </ImageBackground>,
            <ListHeading
              text="Konto"
            />,
            <DefaultFont
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                }
              }
            >
              E-MAIL
            </DefaultFont>,
            <DefaultFont
              style={
                Object {
                  "marginBottom": 10,
                  "paddingLeft": 10,
                }
              }
            >
              Anonym
            </DefaultFont>,
            <ListHeading
              text="Inställningar"
            />,
            <DefaultFont
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                }
              }
            >
              TIDSFORMAT
            </DefaultFont>,
            <Picker
              itemStyle={
                Object {
                  "fontSize": 16,
                  "height": 90,
                  "marginTop": -10,
                }
              }
              onValueChange={[Function]}
              selectedValue="minutes"
              style={
                Array [
                  Object {},
                ]
              }
            >
              <UNDEFINED
                label="Minuter"
                value="minutes"
              />
              <UNDEFINED
                label="Klockslag"
                value="clock"
              />
            </Picker>,
            null,
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <DefaultFont
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginBottom": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 10,
                      "paddingTop": 10,
                    },
                    Object {
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                HÅLLPLATSER NÄRA DIG
              </DefaultFont>
              <Switch
                onTintColor="rgba(119, 158, 203, 0.4)"
                onValueChange={[Function]}
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
                thumbTintColor="#779ECB"
                tintColor="#cecece"
                value={true}
              />
            </View>,
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            />,
            <ListHeading
              text="Åtgärder"
            />,
            <ListItem
              icon="ios-mail-outline"
              iconVisible={true}
              pressItem={[Function]}
              style={
                Object {
                  "marginTop": 10,
                }
              }
              text="Lämna feedback"
            />,
            <View>
              <ListItem
                icon="ios-log-in-outline"
                iconVisible={true}
                pressItem={[Function]}
                text="Logga in"
              />
              <ListItem
                icon="ios-log-in-outline"
                iconVisible={true}
                pressItem={[Function]}
                text="Registrera"
              />
            </View>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />,
              "source": Object {
                "uri": "https://www.w3schools.com/css/img_fjords.jpg",
              },
              "style": Object {
                "height": 120,
                "width": 225,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "style": Object {
                  "backgroundColor": "rgba(255,255,255,0.7)",
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Konto",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "E-MAIL",
              "style": Object {
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 0,
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 10,
              },
            },
            "ref": null,
            "rendered": "E-MAIL",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Anonym",
              "style": Object {
                "marginBottom": 10,
                "paddingLeft": 10,
              },
            },
            "ref": null,
            "rendered": "Anonym",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Inställningar",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "TIDSFORMAT",
              "style": Object {
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 0,
                "paddingBottom": 0,
                "paddingLeft": 10,
                "paddingTop": 10,
              },
            },
            "ref": null,
            "rendered": "TIDSFORMAT",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <UNDEFINED
                  label="Minuter"
                  value="minutes"
                />,
                <UNDEFINED
                  label="Klockslag"
                  value="clock"
                />,
              ],
              "itemStyle": Object {
                "fontSize": 16,
                "height": 90,
                "marginTop": -10,
              },
              "onValueChange": [Function],
              "selectedValue": "minutes",
              "style": Array [
                Object {},
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Minuter",
                  "value": "minutes",
                },
                "ref": null,
                "rendered": null,
                "type": undefined,
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "label": "Klockslag",
                  "value": "clock",
                },
                "ref": null,
                "rendered": null,
                "type": undefined,
              },
            ],
            "type": [Function],
          },
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <DefaultFont
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "marginBottom": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 10,
                        "paddingTop": 10,
                      },
                      Object {
                        "paddingTop": 0,
                      },
                    ]
                  }
                >
                  HÅLLPLATSER NÄRA DIG
                </DefaultFont>,
                <Switch
                  onTintColor="rgba(119, 158, 203, 0.4)"
                  onValueChange={[Function]}
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                  thumbTintColor="#779ECB"
                  tintColor="#cecece"
                  value={true}
                />,
              ],
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "HÅLLPLATSER NÄRA DIG",
                  "style": Array [
                    Object {
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginBottom": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 10,
                      "paddingTop": 10,
                    },
                    Object {
                      "paddingTop": 0,
                    },
                  ],
                },
                "ref": null,
                "rendered": "HÅLLPLATSER NÄRA DIG",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "onTintColor": "rgba(119, 158, 203, 0.4)",
                  "onValueChange": [Function],
                  "style": Object {
                    "marginRight": 10,
                  },
                  "thumbTintColor": "#779ECB",
                  "tintColor": "#cecece",
                  "value": true,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "style": Object {
                "marginBottom": 10,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Åtgärder",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-mail-outline",
              "iconVisible": true,
              "pressItem": [Function],
              "style": Object {
                "marginTop": 10,
              },
              "text": "Lämna feedback",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <ListItem
                  icon="ios-log-in-outline"
                  iconVisible={true}
                  pressItem={[Function]}
                  text="Logga in"
                />,
                <ListItem
                  icon="ios-log-in-outline"
                  iconVisible={true}
                  pressItem={[Function]}
                  text="Registrera"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "icon": "ios-log-in-outline",
                  "iconVisible": true,
                  "pressItem": [Function],
                  "text": "Logga in",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "icon": "ios-log-in-outline",
                  "iconVisible": true,
                  "pressItem": [Function],
                  "text": "Registrera",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Feedback
            close={[Function]}
            visible={false}
          />,
          <ScrollView>
            <ImageBackground
              source={
                Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                }
              }
              style={
                Object {
                  "height": 120,
                  "width": 225,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />
            </ImageBackground>
            <ListHeading
              text="Konto"
            />
            <DefaultFont
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                }
              }
            >
              E-MAIL
            </DefaultFont>
            <DefaultFont
              style={
                Object {
                  "marginBottom": 10,
                  "paddingLeft": 10,
                }
              }
            >
              Anonym
            </DefaultFont>
            <ListHeading
              text="Inställningar"
            />
            <DefaultFont
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                }
              }
            >
              TIDSFORMAT
            </DefaultFont>
            <Picker
              itemStyle={
                Object {
                  "fontSize": 16,
                  "height": 90,
                  "marginTop": -10,
                }
              }
              onValueChange={[Function]}
              selectedValue="minutes"
              style={
                Array [
                  Object {},
                ]
              }
            >
              <UNDEFINED
                label="Minuter"
                value="minutes"
              />
              <UNDEFINED
                label="Klockslag"
                value="clock"
              />
            </Picker>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <DefaultFont
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginBottom": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 10,
                      "paddingTop": 10,
                    },
                    Object {
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                HÅLLPLATSER NÄRA DIG
              </DefaultFont>
              <Switch
                onTintColor="rgba(119, 158, 203, 0.4)"
                onValueChange={[Function]}
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
                thumbTintColor="#779ECB"
                tintColor="#cecece"
                value={true}
              />
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            />
            <ListHeading
              text="Åtgärder"
            />
            <ListItem
              icon="ios-mail-outline"
              iconVisible={true}
              pressItem={[Function]}
              style={
                Object {
                  "marginTop": 10,
                }
              }
              text="Lämna feedback"
            />
            <View>
              <ListItem
                icon="ios-log-in-outline"
                iconVisible={true}
                pressItem={[Function]}
                text="Logga in"
              />
              <ListItem
                icon="ios-log-in-outline"
                iconVisible={true}
                pressItem={[Function]}
                text="Registrera"
              />
            </View>
          </ScrollView>,
        ],
        "style": Object {
          "backgroundColor": "#EAE9EF",
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "close": [Function],
            "visible": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <ImageBackground
                source={
                  Object {
                    "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                  }
                }
                style={
                  Object {
                    "height": 120,
                    "width": 225,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "rgba(255,255,255,0.7)",
                      "flex": 1,
                    }
                  }
                />
              </ImageBackground>,
              <ListHeading
                text="Konto"
              />,
              <DefaultFont
                style={
                  Object {
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  }
                }
              >
                E-MAIL
              </DefaultFont>,
              <DefaultFont
                style={
                  Object {
                    "marginBottom": 10,
                    "paddingLeft": 10,
                  }
                }
              >
                Anonym
              </DefaultFont>,
              <ListHeading
                text="Inställningar"
              />,
              <DefaultFont
                style={
                  Object {
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginBottom": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  }
                }
              >
                TIDSFORMAT
              </DefaultFont>,
              <Picker
                itemStyle={
                  Object {
                    "fontSize": 16,
                    "height": 90,
                    "marginTop": -10,
                  }
                }
                onValueChange={[Function]}
                selectedValue="minutes"
                style={
                  Array [
                    Object {},
                  ]
                }
              >
                <UNDEFINED
                  label="Minuter"
                  value="minutes"
                />
                <UNDEFINED
                  label="Klockslag"
                  value="clock"
                />
              </Picker>,
              null,
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <DefaultFont
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "marginBottom": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 10,
                        "paddingTop": 10,
                      },
                      Object {
                        "paddingTop": 0,
                      },
                    ]
                  }
                >
                  HÅLLPLATSER NÄRA DIG
                </DefaultFont>
                <Switch
                  onTintColor="rgba(119, 158, 203, 0.4)"
                  onValueChange={[Function]}
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                  thumbTintColor="#779ECB"
                  tintColor="#cecece"
                  value={true}
                />
              </View>,
              <View
                style={
                  Object {
                    "marginBottom": 10,
                  }
                }
              />,
              <ListHeading
                text="Åtgärder"
              />,
              <ListItem
                icon="ios-mail-outline"
                iconVisible={true}
                pressItem={[Function]}
                style={
                  Object {
                    "marginTop": 10,
                  }
                }
                text="Lämna feedback"
              />,
              <View>
                <ListItem
                  icon="ios-log-in-outline"
                  iconVisible={true}
                  pressItem={[Function]}
                  text="Logga in"
                />
                <ListItem
                  icon="ios-log-in-outline"
                  iconVisible={true}
                  pressItem={[Function]}
                  text="Registrera"
                />
              </View>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <View
                  style={
                    Object {
                      "backgroundColor": "rgba(255,255,255,0.7)",
                      "flex": 1,
                    }
                  }
                />,
                "source": Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                },
                "style": Object {
                  "height": 120,
                  "width": 225,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "style": Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Konto",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "E-MAIL",
                "style": Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                },
              },
              "ref": null,
              "rendered": "E-MAIL",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Anonym",
                "style": Object {
                  "marginBottom": 10,
                  "paddingLeft": 10,
                },
              },
              "ref": null,
              "rendered": "Anonym",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Inställningar",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "TIDSFORMAT",
                "style": Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginBottom": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 10,
                  "paddingTop": 10,
                },
              },
              "ref": null,
              "rendered": "TIDSFORMAT",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <UNDEFINED
                    label="Minuter"
                    value="minutes"
                  />,
                  <UNDEFINED
                    label="Klockslag"
                    value="clock"
                  />,
                ],
                "itemStyle": Object {
                  "fontSize": 16,
                  "height": 90,
                  "marginTop": -10,
                },
                "onValueChange": [Function],
                "selectedValue": "minutes",
                "style": Array [
                  Object {},
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "label": "Minuter",
                    "value": "minutes",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": undefined,
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "label": "Klockslag",
                    "value": "clock",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": undefined,
                },
              ],
              "type": [Function],
            },
            null,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <DefaultFont
                    style={
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "bold",
                          "marginBottom": 0,
                          "paddingBottom": 0,
                          "paddingLeft": 10,
                          "paddingTop": 10,
                        },
                        Object {
                          "paddingTop": 0,
                        },
                      ]
                    }
                  >
                    HÅLLPLATSER NÄRA DIG
                  </DefaultFont>,
                  <Switch
                    onTintColor="rgba(119, 158, 203, 0.4)"
                    onValueChange={[Function]}
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                    thumbTintColor="#779ECB"
                    tintColor="#cecece"
                    value={true}
                  />,
                ],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": "HÅLLPLATSER NÄRA DIG",
                    "style": Array [
                      Object {
                        "fontSize": 12,
                        "fontWeight": "bold",
                        "marginBottom": 0,
                        "paddingBottom": 0,
                        "paddingLeft": 10,
                        "paddingTop": 10,
                      },
                      Object {
                        "paddingTop": 0,
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": "HÅLLPLATSER NÄRA DIG",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "onTintColor": "rgba(119, 158, 203, 0.4)",
                    "onValueChange": [Function],
                    "style": Object {
                      "marginRight": 10,
                    },
                    "thumbTintColor": "#779ECB",
                    "tintColor": "#cecece",
                    "value": true,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "style": Object {
                  "marginBottom": 10,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Åtgärder",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "ios-mail-outline",
                "iconVisible": true,
                "pressItem": [Function],
                "style": Object {
                  "marginTop": 10,
                },
                "text": "Lämna feedback",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <ListItem
                    icon="ios-log-in-outline"
                    iconVisible={true}
                    pressItem={[Function]}
                    text="Logga in"
                  />,
                  <ListItem
                    icon="ios-log-in-outline"
                    iconVisible={true}
                    pressItem={[Function]}
                    text="Registrera"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "icon": "ios-log-in-outline",
                    "iconVisible": true,
                    "pressItem": [Function],
                    "text": "Logga in",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "icon": "ios-log-in-outline",
                    "iconVisible": true,
                    "pressItem": [Function],
                    "text": "Registrera",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
